# Battery_Dispatch_Optimization

./: .gitignore  Dockerfile  README.md  generate_data.py  main.py  market_data.csv  optimizer.py  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: backend-tests.yml  frontend.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  mock_data.ts  types.ts
tests/: test_main.py
