[project]
name = "battery-dispatch-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "numpy>=2.4.3",
    "openelectricity[analysis]>=0.9.2",
    "pandas>=3.0.1",
    "pulp>=3.3.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
]


# add root directory to python path so pytest can find all modules necessary for testing.
[tool.pytest.ini_options]
pythonpath = [
  "."
]